# OpenAlita

./: .env.example  .gitignore  CODEBASE_ARCHITECTURE.md  GAIA_BENCHMARK_README.md  LANGGRAPH_ARCHITECTURE.md  MCP_IMPROVEMENTS.md  MCP_INTEGRATION_EXAMPLES.md  README.md  README_LANGGRAPH.md  benchmark_results.json  fix_old_servers.py  gaia_submission.jsonl  main.py  mcp_tools_cli.py  mcp_tools_registry.json  my_submission.jsonl  pyproject.toml  requirements.txt  save-checker.py  setup.py  temp_code.cpp  test_gaia_minimal.jsonl  test_gaia_sample.jsonl  test_mcp_server_manager.py  test_submission.jsonl  test_vision.py  test_vision_routing.py
.cursor/rules/: test.mdc
assets/: architecture_diagram.md
gaia_files/: README.md
mcp_servers/data_preprocessor/: requirements.txt  server.py
mcp_servers/discord_integration_validator/: requirements.txt  server.py
mcp_servers/framework_data_analyzer/: requirements.txt  server.py
mcp_servers/mcp_server_finder/: requirements.txt  server.py
mcp_servers/weather_data_fetcher/: requirements.txt  server.py
mcp_servers/web_framework_searcher/: requirements.txt  server.py
mcp_tools/: get_ip_address.py  git_status_checker.py
src/: gaia_benchmark.py  logger.py  schema.py  test_gaia_file_loading.py  utils.py
src/agent/: alita_agent.py  base.py  context_manager.py  external_mcp_manager.py  gaia_agent.py  langgraph_workflow.py  llm_provider.py  mcp.py  mcp_agent.py  mcp_box.py  mcp_factory.py  mcp_registry.py  mcp_server_manager.py  mcp_tool_manager.py  streaming_coordinator.py  toolcall.py  web_agent.py
src/agent/data/: awesome_mcp_servers.md
src/agent/prompts/: __init__.py  coordinator_prompts.py  evaluator_prompts.py  mcp_agent_prompts.py  synthesizer_prompts.py  web_agent_prompts.py
src/agent/workflow/: README.md  __init__.py  browser_agent.py  context_utils.py  coordinator.py  evaluator.py  mcp_agent.py  nodes.py  state.py  synthesizer.py  web_search_node.py
src/prompt/: base.py  mcp.py
src/tool/: base.py  mcp.py
src/web/: mcp_tools_registry.json  pyproject.toml  web_app.py
src/web/static/: style.css
src/web/templates/: index.html
tests/agent/: test_mcp.py
tests/tool/: test_mcp.py
