[project]
name = "open-alita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=22.0.0",
    "aiohttp>=3.9.0,<3.10.0",
    "fastapi>=0.100.0",
    "firecrawl-py>=0.0.16",
    "httpx>=0.24.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "langgraph>=0.3.5",
    "litellm>=1.50.0,<1.52.0",
    "loguru>=0.6.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",
    "pytest>=7.2.0",
    "requests>=2.32.3",
    "typing-extensions>=4.8.0",
    "uvicorn>=0.20.0",
]
